Complete user and video model

--- a/.env.sample
+++ b/.env.sample
@@ -1,2 +1,7 @@
 PORT=8000
-MONGODB_URI=mongodb+srv://DhiMan:<password>@utube.k4cisxr.mongodb.net
+MONGODB_URI=mongodb+srv://DhiMan:UTubepassword@utube.k4cisxr.mongodb.net
+CORS_ORIGIN=*
+ACCESS_TOKEN_SECRET=SGG
+ACCESS_TOKEN_EXPIRY=1d
+REFRESH_TOKEN_SECRET=GG
+REFRESH_TOKEN_EXPIRY=10d
